\name{TVTB-NEWS}
\title{NEWS: The VCF Tool Box}

\section{Changes in version 1.1.8 2016-11-14}{
\subsection{New features}{
\itemize{
\item New method \code{pairsInfo} to visualise a matrix of pairwise plots
    that displays a metric calculated in levels of a given phenotype,
    and stored in columns of the \code{info} slot of a \code{VCF} object.
\item \code{ggpairs} method imported from the \code{GGally} package.
}
}
\subsection{Bug fix}{
\itemize{
\item Updated pattern used to detect INFO columns for a given metric, to be
    more specific.
}
}
\subsection{Major changes}{
\itemize{
\item Internal method \code{.findInfoMetricColumns} moved to \code{utils.R},
    as it is now used in two different user-visible methods.
\item Updated \code{Introduction} vignette to better present usage of the
    \code{addFrequencies} method, better present \emph{VCF filter rules},
    and introduce the new method \code{pairsInfo}.
}
}
}

\section{Changes in version 1.1.7 2016-11-11}{
\subsection{Major changes}{
\itemize{
\item Plotting type(s) cab be selected for the \code{DataTrack} of
    \code{plotInfo}.
}
}
\subsection{Minor changes}{
\itemize{
\item Update to \code{README}.
\item \emph{AppVeyor} caches R library.
}
}
}

\section{Changes in version 1.1.6 2016-11-10}{
\subsection{New features}{
\itemize{
\item \code{plotInfo} method to visualise a metric calculated in levels of a
    given phenotype, and stored in columns of the \code{info} slot.
\item Methods imported from \code{Gviz} package.
\item More methods imported from \code{ensembldb} package.
}
}
\subsection{Major changes}{
\itemize{
\item Added new VCF file and associated preprocessing script in \code{extdata/}
    for gene \code{ADH1B}.
\item \code{Introduction} vignette updated to change activated filter rules.
\item \code{Introduction} vignette updated to introduce the \code{plotInfo}
    method.
}
}
\subsection{Minor changes}{
\itemize{
\item Moved content of the table of motivations to implement