@@ -13,7 +13,7 @@ setGeneric(
     "plotInfo", signature = c("vcf"),
     function(
         vcf, metric, range, annotation, phenotype,
-        type = c("p", "heatmap"))
+        type = c("p", "heatmap"), zero.rm = FALSE)
         standardGeneric("plotInfo")
 )
 
